# FoodDetectionServer

./: main.py  pyproject.toml  requirements.txt  setup.sh
