[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
Flask = "^2.1.3"
numpy = "^1.24.2"
torch = {version = "=1.12.1+cpu", source = "pytorch"}
torchvision = {version = "=0.13.1+cpu", source = "pytorch"}
mmengine = "^0.7.3"
mmcv = {url = "http://download.openmmlab.com/mmcv/dist/cpu/torch1.12.0/mmcv-2.0.0rc4-cp310-cp310-manylinux1_x86_64.whl"}
mmdeploy = "^1.0.0"
mmdeploy-runtime = "^1.0.0"
jsonpickle = "^3.0.1"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu/"
secondary = true
default = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
